WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
303036
[IFC] Crash in WebCore::Layout::InlineFormattingContext::lineLayout
https://bugs.webkit.org/show_bug.cgi?id=303036
Summary
[IFC] Crash in WebCore::Layout::InlineFormattingContext::lineLayout
alan
Reported
2025-11-23 19:31:52 PST
<
rdar://93289307
>
Attachments
[fast-cq]Patch
(1.74 KB, patch)
2025-11-23 19:42 PST
,
alan
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-11-23 19:42:46 PST
Created
attachment 477491
[details]
[fast-cq]Patch
EWS
Comment 2
2025-11-24 05:37:19 PST
Committed
303489@main
(3d0e9baba9aa): <
https://commits.webkit.org/303489@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477491
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug