[IFC] Crash in WebCore::Layout::InlineFormattingContext::lineLayout https://bugs.webkit.org/show_bug.cgi?id=303036 <rdar://93289307>

Reviewed by Antti Koivisto.

Speculative fix to address a crash in InlineFormattingContext::lineLayout when large numbers of
inline items makes vector's reserveInitialCapacity fail.

* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::estimatedDisplayBoxSize):

Canonical link: https://commits.webkit.org/303489@main