Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp
@@ -71,8 +71,9 @@ static size_t estimatedDisplayBoxSize(size_t inlineItemSize)
         // Common case of blocks with only one word where we produce 2 boxes (root inline and text box)
         return 2;
     }
+    static constexpr size_t maximumEstimatedDisplayBoxSize = 1000; // Let's try not to overwhelm vector's reserveInitialCapacity.
     // This value represents a simple average derived from typical web page content.
-    return inlineItemSize * 0.6;
+    return std::min<size_t>(maximumEstimatedDisplayBoxSize, inlineItemSize * 0.6);
 }
 
 static std::optional<InlineItemRange> partialRangeForDamage(const InlineItemList& inlineItemList, const InlineDamage& lineDamage)
